--- a/loggi/stylesheets/bootstrap/_variables.scss
+++ b/loggi/stylesheets/bootstrap/_variables.scss
@@ -8,33 +8,56 @@ $bootstrap-sass-asset-helper: false !default;
 //
 //## Gray and brand colors for use across Bootstrap.
 
-$gray-base:              #000 !default;
-$gray-darker:            lighten($gray-base, 13.5%) !default; // #222
-$gray-dark:              lighten($gray-base, 20%) !default;   // #333
-$gray:                   lighten($gray-base, 33.5%) !default; // #555
-$gray-light:             lighten($gray-base, 46.7%) !default; // #777
-$gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
+$black: #000;
+$gray-darker: #333 !default;
+$gray-dark: #585858 !default;
+$gray-85: #858585;
+$gray-medium-dark: #a3a3a3;
+$gray: #bbb;
+$gray-medium-light: #d3d3d3;
+$gray-light: #e9e9e9;
+$gray-lighter: #f1f1f1 !default;
+$white: #fff;
 
-$brand-primary:         darken(#428bca, 6.5%) !default; // #337ab7
-$brand-success:         #5cb85c !default;
-$brand-info:            #5bc0de !default;
-$brand-warning:         #f0ad4e !default;
-$brand-danger:          #d9534f !default;
+// Accent colors
+// -------------------------
+$blue: #00aeef !default;
+$blue-dark: #0267dc !default;
+$blue-light: #2d8fe2 !default;
+$green: #46a546 !default;
+$green-dark: darken($green, 15%);
+$protocol-green: #9ac634 !default;
+$red-light: #bd261d !default;
+$red: #e3291c !default;
+$red-dark: #902019 !default;
+$red-heart: #ee1720 !default;
+$yellow: #ffbe00 !default;
+$orange: #e8910c !default;
+$pink: #c3325f !default;
+$purple: #7a43b6 !default;
+$badass: #bada55 !default;
 
+// Brand colors
+// -------------------------
 
-//== Scaffolding
-//
-//## Settings for some of the most global styles.
+$brand-primary: $blue !default;
+$brand-success: #5cb85c !default;
+$brand-warning: #f0ad4e !default;
+$brand-danger: #d9534f !default;
+$brand-info: #5bc0de !default;
 
-//** Background color for `<body>`.
-$body-bg:               #fff !default;
-//** Global text color on `<body>`.
-$text-color:            $gray-dark !default;
+// Scaffolding
+// -------------------------
 
-//** Global textual link color.
-$link-color:            $brand-primary !default;
-//** Link hover color set via `darken()` function.
-$link-hover-color:      darken($link-color, 15%) !default;
+$body-bg: #fff !default;
+$text-color: $gray-darker !default;
+
+// Links
+// -------------------------
+
+$link-color: $brand-primary !default;
+$link-hover-color: darken($link-color, 15%) !default;
+
 //** Link hover decoration.
 $link-hover-decoration: underline !default;
 
