--- a/loggi/stylesheets/bootstrap/_variables.scss
+++ b/loggi/stylesheets/bootstrap/_variables.scss
@@ -893,3 +893,7 @@ $page-header-border-color:    $gray-lighter !default;
 $dl-horizontal-offset:        $component-offset-horizontal !default;
 //** Horizontal line color.
 $hr-border:                   $gray-lighter !default;
+
+
+// Loggi Vars
+$header-height: 45px;
