--- a/loggi/stylesheets/_bootstrap.scss
+++ b/loggi/stylesheets/_bootstrap.scss
@@ -54,3 +54,6 @@
 // Utility classes
 @import "bootstrap/utilities";
 @import "bootstrap/responsive-utilities";
+
+// Skeleton CSS
+@import "components/dashboard";
