--- a/loggi/stylesheets/bootstrap/_variables.scss
+++ b/loggi/stylesheets/bootstrap/_variables.scss
@@ -447,7 +447,9 @@ $navbar-inverse-toggle-border-color:        #333 !default;
 //##
 
 //=== Shared nav styles
-$nav-link-padding:                          10px 15px !default;
+$nav-link-padding-vertical:                 10px !default;
+$nav-link-padding-horizontal:               15px !default;
+$nav-link-padding:                          $nav-link-padding-vertical $nav-link-padding-horizontal !default;
 $nav-link-hover-bg:                         $gray-lighter !default;
 
 $nav-disabled-link-color:                   $gray-light !default;
