--- a/loggi/stylesheets/components/_main-nav.scss
+++ b/loggi/stylesheets/components/_main-nav.scss
@@ -7,6 +7,10 @@
   background: $gray-darker;
   z-index: 2;
 
+  i.icon {
+    display: inline-block;
+  }
+
   header {
     $border-width: 1px;
     height: $header-height;
@@ -20,6 +24,8 @@
     padding: 1px;
     
     .product-switcher {
+      font-size: 13px;
+      color: $gray-85;
       @include input-height($header-height - ($border-width * 4)); // removing borders and paddings
       padding: 0 $nav-link-padding-horizontal;
       display: block;
@@ -27,10 +33,10 @@
     }
   }
 
-
   li a {
     width: $main-nav-width;
     height: 86px;
+    text-align: center;
     @media (min-height: $screen-sm) {
       height: 101px;
     }
