--- a/loggi/stylesheets/bootstrap/_navs.scss
+++ b/loggi/stylesheets/bootstrap/_navs.scss
@@ -27,10 +27,15 @@
       margin-right: 0;
 
       &:hover, &:focus {
-        background-color: #282828;
         border-color: transparent;
       }
     }
+  }
+}
+
+#main-nav .nav-tabs > li > a {
+  &:hover, &:focus {
+    background-color: #282828;
   }
 }
 
