--- a/loggi/stylesheets/extended/_mixins.scss
+++ b/loggi/stylesheets/extended/_mixins.scss
@@ -97,10 +97,9 @@
          (min-resolution: 1.3dppx) {
     /* on retina, use image that's scaled by 2 */
     background-image: url($image);
-    background-size: $width $height;
+    background-size: contain;
   }
 }
-
 
 // absolute and fixed mixins
 @mixin position($t,$l,$b,$r){
